[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crmprtd"
version = "4.5.0"
description = "Utility to download near real time weather data and insert it into PCIC's database"
license = "GPL-3.0-only"
authors = [
    "James Hiebert <hiebert@uvic.ca>",
    "Rod Glover <rglover@uvic.ca>",
    "Nik Rados"
]
readme = "README.md"
homepage = "http://www.pacificclimate.org/"
repository = "https://github.com/pacificclimate/crmprtd"
keywords = ["sql", "database", "data", "science", "climate", "oceanography", "meteorology"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include = "crmprtd" },
]
include = [
    "data/*.yaml",
    "data/*.xsl",
    "tests/data/*",
    "networks/wamr/station_substitutions.yaml",
    "networks/bc_hydro/variable_substitutions.yaml",
]

[[tool.poetry.source]]
name = "pcic-pypi"
url = "https://pypi.pacificclimate.org/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
# Mandatory dependencies.
python = "^3.8"
lxml = "*"
psycopg2 = "*"
pyyaml = "*"
python-dateutil = "*"
pytz = "*"
requests = { version = "*", extras = ["security"] }
pycds = { version = "4.3.0", source = "pcic-pypi" }
pint = "*"
pysftp = "*"
# In Python 3.8 and/or possibly on the crmprtd server, if we use a later version of `urllib3`,
# importing it fails because it dropped support for OpenSSL<1.1.1, which is what we have
# currently on the crmprtd server. So we have to pin `urllib3`. This should become a
# version-dependent constraint if we loosen the `python` constraint above. For more details,
# see https://github.com/pacificclimate/crmprtd/issues/169.
urllib3 = "<2"

# Optional dependencies, added via the extras facility; see below.
"python-json-logger" = { version = "*", optional = true }

[tool.poetry.extras]
jsonlogger = ["python-json-logger"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
requests_mock = "*"
pytest-cov = "*"
"testing.postgresql" = "*"
pytest-mock = "*"
black = "*"
pre-commit = "*"

[tool.poetry.scripts]
crmprtd_pipeline = "crmprtd.download_cache_process:main"
crmprtd_download = "crmprtd.download:main"
crmprtd_process = "crmprtd.process:main"
# Adding the scripts in scripts/ will
# EITHER require refactoring them so that they are (a)
# in the crmprtd package, and (b) `main()` can be invoked without arguments (i.e., put
# arg parsing in `main()`).
# OR make scripts/ a "package" and include it in the [tool.poetry.packages] table
# Not sure which would be better.
#
# These are the Python scripts to be added.
#
#    "scripts/ec_recovery_helper.py",
#    "scripts/ec_recovery.py",
#    "scripts/infill_all.py",
#    "scripts/load_wamr_stns.py",
#    "scripts/moti_infill_download.py",
#    "scripts/moti_infill_insert.py",
#    "scripts/moti_insert_files.py",
#
#  Supplementary scripts. Add to the [tool.poetry] include key.
#
#    "crmprtd/execution/update_matviews_lazy.sql",
