[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "crmprtd"
version = "5.0.1rc1"
description = "Utility to download near real time weather data and insert it into PCIC's database"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "James Hiebert", email = "hiebert@uvic.ca" },
  { name = "Rod Glover", email = "rglover@uvic.ca" },
  { name = "Nik Rados" }
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
keywords = ["sql", "database", "data", "science", "climate", "oceanography", "meteorology"]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.urls]
Homepage = "http://www.pacificclimate.org/"
Repository = "https://github.com/pacificclimate/crmprtd"

[project.scripts]
crmprtd_pipeline = "crmprtd.download_cache_process:main"
crmprtd_download = "crmprtd.download:main"
crmprtd_process = "crmprtd.process:main"
crmprtd_gulpy = "crmprtd.process:gulpy_plus_plus"

[tool.poetry]
packages = [
  { include = "crmprtd" }
]
include = [
  "data/*.yaml",
  "data/*.xsl",
  "tests/data/*",
  "networks/wamr/station_substitutions.yaml",
  "networks/bc_hydro/variable_substitutions.yaml"
]

[[tool.poetry.source]]
name = "pcic-pypi"
url = "https://pypi.pacificclimate.org/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
lxml = "*"
psycopg2 = "*"
pyyaml = "*"
python-dateutil = "*"
pytz = "*"
requests = { version = "*", extras = ["security"] }
pycds = "5.0.0"
pint = "*"
pysftp = "*"
urllib3 = "<2"
python-json-logger = { version = "*", optional = true }
black = "25.1.0"

[tool.poetry.extras]
jsonlogger = ["python-json-logger"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
requests_mock = "*"
pytest-cov = "*"
testing-postgresql = "*"
pytest-mock = "*"
black = "25.1.0"
pre-commit = "*"
